--- a/HackerNews/StoryTableCellView.xib
+++ b/HackerNews/StoryTableCellView.xib
@@ -1,86 +1,111 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StoryTableViewCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyCell" rowHeight="95" id="iRQ-jH-CmK" customClass="StoryTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyCell" rowHeight="110" id="iRQ-jH-CmK" customClass="StoryTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iRQ-jH-CmK" id="T6X-H3-vUK">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="story" translatesAutoresizingMaskIntoConstraints="NO" id="fPB-iS-CHL">
-                        <rect key="frame" x="5" y="9" width="26" height="25"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="story" translatesAutoresizingMaskIntoConstraints="NO" id="fPB-iS-CHL">
+                        <rect key="frame" x="5" y="8" width="26" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="1Mx-Iq-Obt"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="26" id="MAE-eo-eWG"/>
                             <constraint firstAttribute="width" constant="26" id="sZ9-ta-97E"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="xqr-Lh-jhs"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="File system that stores location of file in Pi" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yU-CX-r8t" userLabel="List Title">
-                        <rect key="frame" x="38" y="10" width="239" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="File system that stores location of file in Pi" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yU-CX-r8t" userLabel="List Title">
+                        <rect key="frame" x="38" y="10" width="239" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="44" id="0VW-fC-gu6"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="3fT-5h-nyx"/>
+                            <constraint firstAttribute="height" priority="250" constant="22" id="3fT-5h-nyx"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="by morisy 3 hours ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3g-nd-6Qb" userLabel="List Title">
-                        <rect key="frame" x="38" y="40" width="200" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by morisy 3 hours ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3g-nd-6Qb" userLabel="List Title">
+                        <rect key="frame" x="38" y="61" width="239" height="20"/>
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="251" misplaced="YES" image="Points" translatesAutoresizingMaskIntoConstraints="NO" id="Tit-7y-U4v">
-                        <rect key="frame" x="38" y="67" width="13" height="17"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="Points" translatesAutoresizingMaskIntoConstraints="NO" id="Tit-7y-U4v">
+                        <rect key="frame" x="38" y="86" width="13" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="68d-1d-2LJ"/>
+                            <constraint firstAttribute="width" constant="13" id="Sfl-Aj-Xb6"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="37" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dq8-2u-aHN" userLabel="List Title">
-                        <rect key="frame" x="55" y="65" width="40" height="19"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="37" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dq8-2u-aHN" userLabel="List Title">
+                        <rect key="frame" x="55" y="86" width="16" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="HF7-Xr-SyQ"/>
+                            <constraint firstAttribute="width" constant="16" id="Q7K-sq-blL"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Chats_3_" translatesAutoresizingMaskIntoConstraints="NO" id="tkA-zf-Vre">
-                        <rect key="frame" x="100" y="67" width="20" height="16"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chats_3_" translatesAutoresizingMaskIntoConstraints="NO" id="tkA-zf-Vre">
+                        <rect key="frame" x="81" y="86" width="20" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="Ckv-zQ-C07"/>
+                            <constraint firstAttribute="height" constant="16" id="MKC-Ot-1u9"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="8" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tu8-F5-bFV" userLabel="List Title">
-                        <rect key="frame" x="124" y="66" width="40" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="8" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tu8-F5-bFV" userLabel="List Title">
+                        <rect key="frame" x="105" y="86" width="129" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="4tB-U7-NV8"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="(github)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaL-6f-t0d">
-                        <rect key="frame" x="178" y="65" width="122" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(github)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaL-6f-t0d">
+                        <rect key="frame" x="236" y="86" width="42" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="Hjm-ge-kpf"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="fPB-iS-CHL" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leadingMargin" constant="-3" id="2ik-ei-py9"/>
-                    <constraint firstItem="Tit-7y-U4v" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="Bge-bX-XUv"/>
-                    <constraint firstItem="1yU-CX-r8t" firstAttribute="top" secondItem="T6X-H3-vUK" secondAttribute="topMargin" constant="2" id="CSR-iO-YJh"/>
-                    <constraint firstItem="tu8-F5-bFV" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="EqZ-iI-RAD"/>
-                    <constraint firstItem="tu8-F5-bFV" firstAttribute="leading" secondItem="tkA-zf-Vre" secondAttribute="trailing" constant="4" id="PDk-5F-xJE"/>
-                    <constraint firstItem="Tit-7y-U4v" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leadingMargin" constant="30" id="Q5X-3P-cYd"/>
-                    <constraint firstItem="QaL-6f-t0d" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="QS1-6v-AAi"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="QaL-6f-t0d" secondAttribute="trailing" constant="1" id="VC7-Z5-SpY"/>
-                    <constraint firstItem="1yU-CX-r8t" firstAttribute="leading" secondItem="fPB-iS-CHL" secondAttribute="trailing" constant="7" id="X7s-hE-Vji"/>
-                    <constraint firstItem="fPB-iS-CHL" firstAttribute="top" secondItem="T6X-H3-vUK" secondAttribute="topMargin" id="XiK-bm-RUv"/>
-                    <constraint firstItem="u3g-nd-6Qb" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leadingMargin" constant="30" id="ZeJ-tM-p9q"/>
-                    <constraint firstItem="tkA-zf-Vre" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="bez-6f-iIS"/>
-                    <constraint firstItem="Dq8-2u-aHN" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="jFk-bY-Mxy"/>
-                    <constraint firstItem="QaL-6f-t0d" firstAttribute="leading" secondItem="tu8-F5-bFV" secondAttribute="trailing" constant="2" id="jvl-5L-P8T"/>
-                    <constraint firstItem="Dq8-2u-aHN" firstAttribute="leading" secondItem="Tit-7y-U4v" secondAttribute="trailing" constant="4" id="nV1-VT-NSa"/>
-                    <constraint firstItem="u3g-nd-6Qb" firstAttribute="top" secondItem="1yU-CX-r8t" secondAttribute="bottom" constant="7" id="ntb-n5-ap1"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="1yU-CX-r8t" secondAttribute="trailing" constant="2" id="p1j-ah-EVw"/>
-                    <constraint firstItem="tkA-zf-Vre" firstAttribute="leading" secondItem="Dq8-2u-aHN" secondAttribute="trailing" constant="10" id="yy4-q8-ESf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="u3g-nd-6Qb" secondAttribute="trailing" constant="2" id="2NO-cd-6sP"/>
+                    <constraint firstItem="QaL-6f-t0d" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="6rq-6r-I5q"/>
+                    <constraint firstItem="Tit-7y-U4v" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="Bm6-zE-GKV"/>
+                    <constraint firstItem="fPB-iS-CHL" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leading" constant="5" id="DUD-Tx-gs4"/>
+                    <constraint firstAttribute="bottom" secondItem="tkA-zf-Vre" secondAttribute="bottom" constant="10" id="G9j-IL-tK3"/>
+                    <constraint firstItem="u3g-nd-6Qb" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leadingMargin" constant="30" id="HsU-Hg-ytu"/>
+                    <constraint firstItem="tkA-zf-Vre" firstAttribute="leading" secondItem="Dq8-2u-aHN" secondAttribute="trailing" constant="10" id="IH1-dz-mbR"/>
+                    <constraint firstAttribute="trailing" secondItem="QaL-6f-t0d" secondAttribute="trailing" constant="9" id="JCK-2N-E2S"/>
+                    <constraint firstItem="tu8-F5-bFV" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="JSF-vL-d3b"/>
+                    <constraint firstItem="fPB-iS-CHL" firstAttribute="top" secondItem="T6X-H3-vUK" secondAttribute="top" constant="8" id="NBt-vZ-6iO"/>
+                    <constraint firstItem="1yU-CX-r8t" firstAttribute="leading" secondItem="fPB-iS-CHL" secondAttribute="trailing" constant="7" id="PV4-ys-r0N"/>
+                    <constraint firstItem="u3g-nd-6Qb" firstAttribute="top" secondItem="1yU-CX-r8t" secondAttribute="bottom" constant="7" id="QMv-SF-YLC"/>
+                    <constraint firstAttribute="bottom" secondItem="Tit-7y-U4v" secondAttribute="bottom" constant="9" id="RmB-RI-7cY"/>
+                    <constraint firstAttribute="bottom" secondItem="Dq8-2u-aHN" secondAttribute="bottom" constant="6" id="W8B-Ir-OGN"/>
+                    <constraint firstAttribute="bottom" secondItem="tu8-F5-bFV" secondAttribute="bottom" constant="6" id="Y59-cG-dSP"/>
+                    <constraint firstItem="QaL-6f-t0d" firstAttribute="leading" secondItem="tu8-F5-bFV" secondAttribute="trailing" constant="2" id="clS-Nm-cZX"/>
+                    <constraint firstItem="Dq8-2u-aHN" firstAttribute="leading" secondItem="Tit-7y-U4v" secondAttribute="trailing" constant="4" id="din-Zl-dE7"/>
+                    <constraint firstItem="tu8-F5-bFV" firstAttribute="top" secondItem="u3g-nd-6Qb" secondAttribute="bottom" constant="5" id="hF6-Dd-LKN"/>
+                    <constraint firstItem="1yU-CX-r8t" firstAttribute="top" secondItem="T6X-H3-vUK" secondAttribute="top" constant="10" id="lkY-ts-kqa"/>
+                    <constraint firstItem="tu8-F5-bFV" firstAttribute="leading" secondItem="tkA-zf-Vre" secondAttribute="trailing" constant="4" id="mph-X7-zMd"/>
+                    <constraint firstAttribute="trailing" secondItem="1yU-CX-r8t" secondAttribute="trailing" constant="10" id="nwK-EG-5ZZ"/>
+                    <constraint firstItem="QaL-6f-t0d" firstAttribute="leading" secondItem="tu8-F5-bFV" secondAttribute="trailing" constant="2" id="tJS-ag-RIx"/>
+                    <constraint firstItem="Tit-7y-U4v" firstAttribute="leading" secondItem="T6X-H3-vUK" secondAttribute="leading" constant="38" id="tnz-1G-WAw"/>
+                    <constraint firstAttribute="bottom" secondItem="QaL-6f-t0d" secondAttribute="bottom" constant="9" id="zE6-vm-as4"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -93,7 +118,7 @@
                 <outlet property="titleLabel" destination="1yU-CX-r8t" id="PDO-4P-tNx"/>
                 <outlet property="typeImageView" destination="fPB-iS-CHL" id="xbK-eb-Y7T"/>
             </connections>
-            <point key="canvasLocation" x="246" y="-83.5"/>
+            <point key="canvasLocation" x="246" y="-74.5"/>
         </tableViewCell>
     </objects>
     <resources>
