--- a/HackerNews/Base.lproj/Main_iPhone.storyboard
+++ b/HackerNews/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dtB-L3-5IC">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
@@ -197,7 +196,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="buF-0l-3gg">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyCell" id="buF-0l-3gg">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="buF-0l-3gg" id="IvJ-2a-JSU">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -244,7 +243,7 @@
                         <color key="separatorColor" red="0.57249718904495239" green="0.57258230447769165" blue="0.5724785327911377" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                         <inset key="separatorInset" minX="12" minY="0.0" maxX="12" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="3JW-Jl-Kh7" customClass="StoryTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="storyCell" id="3JW-Jl-Kh7" customClass="StoryTableViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3JW-Jl-Kh7" id="Yjd-7D-1N0">
@@ -515,88 +514,6 @@
             </objects>
             <point key="canvasLocation" x="3683" y="144"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="WKx-L2-mW4">
-            <objects>
-                <viewController id="a87-zz-eem" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="vYu-vG-vip"/>
-                        <viewControllerLayoutGuide type="bottom" id="ilF-ni-Bpf"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Z9r-f2-dyw">
-                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Page Load" translatesAutoresizingMaskIntoConstraints="NO" id="Tj5-HT-XeN">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JPF-qp-zNy">
-                                <rect key="frame" x="222" y="33" width="87" height="36"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="d10-kD-wbb" kind="push" id="kDR-X2-uqJ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cWG-WB-TAM">
-                                <rect key="frame" x="10" y="33" width="51" height="33"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="JCu-AS-B1I" kind="unwind" unwindAction="unwindFromView:" id="mBU-gO-ld3"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="qsA-yT-xSN"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rJ8-mr-ypt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="JCu-AS-B1I" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="4766" y="144"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="hxH-Zd-Mm0">
-            <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="d10-kD-wbb" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cAT-jZ-Ze4"/>
-                        <viewControllerLayoutGuide type="bottom" id="Vg5-b1-78y"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="27e-rG-Rn1">
-                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="oje-Bu-sJQ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <imageView key="tableFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Comments 3" id="QUl-DY-Qab">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="1250"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </imageView>
-                            </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2e4-6N-Ftp">
-                                <rect key="frame" x="6" y="31" width="61" height="36"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="ocr-i9-hK1" kind="unwind" unwindAction="unwindFromView:" id="XLD-fd-OtA"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="kCQ-VM-hjy"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pk2-AQ-qwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="ocr-i9-hK1" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="5308" y="144"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="dgc-WQ-nWz">
             <objects>
@@ -630,10 +547,8 @@
     </scenes>
     <resources>
         <image name="Chats_3_" width="20" height="16"/>
-        <image name="Comments 3" width="320" height="1250"/>
         <image name="JobsIcon" width="28" height="25"/>
         <image name="LatestIcon" width="18" height="26"/>
-        <image name="Page Load" width="320" height="568"/>
         <image name="Points" width="13" height="17"/>
         <image name="RefreshIcon" width="20" height="24"/>
         <image name="Safari Back" width="12" height="22"/>
@@ -651,8 +566,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="MQs-EZ-GAP"/>
-        <segue reference="cYG-mk-hRy"/>
+        <segue reference="05X-Ed-HDg"/>
+        <segue reference="qBj-4v-4gv"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.91764705882352937" green="0.30196078431372547" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
 </document>
