--- a/HackerNews/StoryTextCellView.xib
+++ b/HackerNews/StoryTextCellView.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -14,30 +13,24 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dF7-TC-nGI" id="Jqq-G2-2Te">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="File system that stores location of file in Pi" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zoM-i1-8oZ" userLabel="List Title">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg6-D7-rrz">
                         <rect key="frame" x="40" y="9" width="229" height="42"/>
-                        <constraints>
-                            <constraint firstAttribute="height" priority="250" constant="22" id="Ldl-yW-y1S"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Ldl-yW-y1S"/>
-                            </mask>
-                        </variation>
-                    </label>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
+                    </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="zoM-i1-8oZ" firstAttribute="top" secondItem="Jqq-G2-2Te" secondAttribute="topMargin" constant="1" id="mnX-Sx-QjW"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="zoM-i1-8oZ" secondAttribute="trailing" constant="10" id="qmE-2w-I0Z"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="zoM-i1-8oZ" secondAttribute="bottom" constant="5" id="wWu-nz-2vl"/>
-                    <constraint firstItem="zoM-i1-8oZ" firstAttribute="leading" secondItem="Jqq-G2-2Te" secondAttribute="leadingMargin" constant="32" id="xRe-Ki-9cv"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Hg6-D7-rrz" secondAttribute="bottom" constant="5" id="CwM-SZ-Pn8"/>
+                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="top" secondItem="Jqq-G2-2Te" secondAttribute="topMargin" constant="1" id="J7C-JB-X20"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Hg6-D7-rrz" secondAttribute="trailing" constant="10" id="KAI-Jr-4Sb"/>
+                    <constraint firstItem="Hg6-D7-rrz" firstAttribute="leading" secondItem="Jqq-G2-2Te" secondAttribute="leadingMargin" constant="32" id="lfP-68-ZDU"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="textCell" destination="zoM-i1-8oZ" id="maJ-Xt-HJR"/>
+                <outlet property="storyText" destination="Hg6-D7-rrz" id="Aab-RH-2Q4"/>
             </connections>
             <point key="canvasLocation" x="432" y="-47.5"/>
         </tableViewCell>
